crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E402_E402_10.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E402 Module level import not at top of file
  --> E402_10.py:12:1
   |
10 | assert sys.platform == os.name
11 |
12 | import msvcrt
   | ^^^^^^^^^^^^^
   |
help: Move module level imports to top of file
