crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E402_E402_11.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E402 Module level import not at top of file
  --> E402_11.py:11:1
   |
 9 | assert system.platform == "win32"
10 |
11 | import msvcrt
   | ^^^^^^^^^^^^^
   |
help: Move module level imports to top of file
