crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E402_E402_2.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
error[E402]: E402_2.py:7:1: Module level import not at top of file

  |
5 | del os.environ["WORLD_SIZE"]
6 | 
7 | import torch
  | ^^^^^^^^^^^^
  |
