crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E402_E402_6.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E402 Module level import not at top of file
  --> E402_6.py:51:1
   |
49 | assert supported(sys.platform)
50 |
51 | import ctypes
   | ^^^^^^^^^^^^^
   |
help: Move module level imports to top of file
